fix(html): remove double border in `.navbar`
The base page's `.container` has borders on the left
and right. The borders of `.navbar` double up against
these and just make things blurry. Remove these extra
borders.

--- a/cl/assets/static-global/css/override.css
+++ b/cl/assets/static-global/css/override.css
@@ -24,7 +24,9 @@ header {
 
 .navbar {
   margin-bottom: 0;
-  border-bottom: 1px solid #e7e7e7;
+  border-right: none;
+  border-bottom-color: #e7e7e7;
+  border-left: none;
 }
 
 .navbar-toggle {
